test/files/neg/auto-application.check
auto-application.scala:4: error: Int does not take parameters
  ("": Any).##()
              ^
auto-application.scala:5: error: Int does not take parameters
  ("": AnyRef).##()
                 ^
auto-application.scala:6: error: Int does not take parameters
  ("": Object).##()
                 ^
auto-application.scala:9: warning: Auto-application to `()` is deprecated. Supply the empty argument list `()` explicitly to invoke method meth,
or remove the empty argument list from its definition (Java-defined methods are exempt).
In Scala 3, an unapplied method like this will be eta-expanded into a function.
  meth // warn, auto-application (of nilary methods) is deprecated
  ^
1 warning
3 errors
